# anime_bot

./: Cargo.toml
src/: main.rs
