[package]
name = "anime_cli"
version = "0.1.0"
authors = ["yollotltamayo <yollotltamayo@comunidad.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
prettytable-rs = "^0.8"
bytes = "0.5"
tracing = "0.1.9"
tracing-futures = "0.2"
multipart = { version = "0.16", default-features = false, features = ["client"] }
telegram-bot = "0.8.0"


hyper = "0.13"
hyper-tls = { version = "0.4", optional = true  }
hyper-rustls = { version = "0.19", optional = true }
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }

